<resources>
    <string name="app_name">NU_MAD_SM2022_Final_Project_Team2</string>

    // log in flow
    <string name="welcome">Welcome to PenciledIn!</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="pronouns2">Pronouns</string>
    <string name="birthday_formatted">Birthday (MM/DD/YYYY)</string>
    <string name="back">Back</string>
    <string name="logoDescription">Logo</string>
    <string name="uploadAvatar">Upload Profile Photo</string>

    // bottom nav bar
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_profile">Profile</string>

    // profile
    <string name="profile">Profile</string>
    <string name="name">Name:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="pronouns">Pronouns:</string>
    <string name="email2">Email:</string>
    <string name="password2">Password:</string>
    <string name="retyped_password">Re-type Password:</string>
    <string name="birthday">Birthday:</string>
    <string name="editProfile">Edit Profile</string>
    <string name="saveProfileChanges">Save Profile Changes</string>
    <string name="editProfileImage">Edit Profile Image</string>
    <string name="editStartDate">Start Date:</string>
    <string name="editEndDate">End Date:</string>
    <string name="logout">Logout</string>

    // task
    <string name="editTask">Add/Edit Task</string>
    <string name="taskMame">Task Name:</string>
    <string name="duration">Duration:</string>
    <string name="priority">Priority:</string>
    <string name="startDate">Start Date:</string>
    <string name="dueDate">Due Date:</string>
    <string name="event">Event</string>
    <string name="task">Task</string>
    <string name="category">Category:</string>
    <string name="location">Location:</string>
    <string name="blockers">Blockers:</string>
    <string name="saveTask">Save Task</string>
    <string name="newTask">New Task</string>
    <string name="newEvent">New Event</string>
    <string name="pickDate">Pick Date</string>
    <string name="pickTime">Pick Time</string>
    <string name="priorityInfo">Choose a number that represents the payoff value of completing this
        task. For example, a task with a payoff of 10 is twice as beneficial to you as a task with
        a  payoff of 5.</string>
    <string name="close">Close</string>

    // event
    <string name="editEvent">Add/Edit Event</string>
    <string name="eventName">Event Name:</string>
    <string name="eventLocation">Location:</string>
    <string name="saveEvent">Save Event</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>

    // task /spinner category
    <string-array name="categories_array">
        <item>Self-Care</item>
        <item>Work</item>
        <item>School</item>
        <item>Home</item>
        <item>Social</item>
        <item>Family</item>
    </string-array>

    // alarm / wake-up task
    <string name="alarm">Alarms</string>
    <string name="editAlarm">Edit Alarm</string>
    <string name="addAlarm">Add Alarm</string>
    <string name="repeat">Repeat</string>
    <string name="snooze">Snooze</string>
    <string name="wakeUpTask">Wake-Up Task</string>
    <string name="daily">Daily</string>
    <string name="saveAlarm">Save Alarm</string>
    <string name="plusSign">+</string>
    <string name="editAlarmTimeInputHint">00:00</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="submit">Submit</string>
    <string name="clickLink">Click the link below to go to today\'s Wake-Up Task!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="message">Message</string>
    <string name="once">Once</string>
    <string name="weekly">Weekly</string>
    <string name="biweekly">Bi-Weekly</string>


    // camera
    <string name="take_photo">Take Photo</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="open_photo_gallery">Open Photo Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>