<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editAlarmLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarm.EditAlarmFragment">

    <EditText
        android:id="@+id/editAlarmMessageInput"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editAlarmMessageText"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmTimeInput" />

    <TextView
        android:id="@+id/editAlarmMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmTimeInput" />

    <TextView
        android:id="@+id/editTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/editAlarm"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editAlarmLeftArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/editAlarmLeftArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAlarmTimeInput"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/editAlarmTimeInputHint"
        android:inputType="time"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTaskTitle" />

    <Switch
        android:id="@+id/editAlarmAMPMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmLeftArrow" />

    <TextView
        android:id="@+id/editAlarmAMPMText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="AM"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmAMPMSwitch" />

    <TextView
        android:id="@+id/editAlarmRepeatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/repeat"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmWakeUpTaskText" />

    <TextView
        android:id="@+id/editAlarmWakeUpTaskText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/wakeUpTask"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmMessageText" />

    <Button
        android:id="@+id/editAlarmSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/saveAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmRadioGroup" />

    <Switch
        android:id="@+id/editAlarmWakeUpTaskSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmMessageInput" />

    <RadioGroup
        android:id="@+id/editAlarmRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/editAlarmRepeatText"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmWakeUpTaskSwitch">

        <RadioButton
            android:id="@+id/editAlarmOnceOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/once" />

        <RadioButton
            android:id="@+id/editAlarmDailyOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/editAlarmWeeklyOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/editAlarmBiweeklyOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/biweekly" />

    </RadioGroup>

    <Button
        android:id="@+id/deleteAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>