<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.nu_mad_sm2022_final_project_team2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.nu_mad_sm2022_final_project_team2.ui.tasks.TasksFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.example.nu_mad_sm2022_final_project_team2.ui.alarm.AlarmFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.nu_mad_sm2022_final_project_team2.profile.EditProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>