<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addAlarmLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alarm.AddAlarmFragment"
    android:label="@string/addAlarm">

    <RadioGroup
        android:id="@+id/addAlarmRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/addAlarmRepeatText"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmWakeUpTaskSwitch">

        <RadioButton
            android:id="@+id/addAlarmOnceOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/once" />

        <RadioButton
            android:id="@+id/addAlarmDailyOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/addAlarmWeeklyOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/addAlarmBiweeklyOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biweekly" />
    </RadioGroup>

    <TextView
        android:id="@+id/addAlarmMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmTimeInput" />

    <TextView
        android:id="@+id/addAlarmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/addAlarm"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/addAlarmLeftArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addAlarmLeftArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addAlarmTimeInput"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/editAlarmTimeInputHint"
        android:inputType="time"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmTitle" />

    <Switch
        android:id="@+id/addAlarmAMPMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmLeftArrow" />

    <TextView
        android:id="@+id/addAlarmAMPMText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="AM"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmAMPMSwitch" />

    <TextView
        android:id="@+id/addAlarmRepeatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/repeat"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmWakeUpTaskText" />

    <TextView
        android:id="@+id/addAlarmWakeUpTaskText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/wakeUpTask"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmMessageText" />

    <Button
        android:id="@+id/addAlarmSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/saveAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmRadioGroup" />

    <Switch
        android:id="@+id/addAlarmWakeUpTaskSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmMessageInput" />

    <EditText
        android:id="@+id/addAlarmMessageInput"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/addAlarmMessageText"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmAMPMText" />

</androidx.constraintlayout.widget.ConstraintLayout>